	* Incremented the database version to 50.
	* Added a 'Display Episode Links' control to the Edit Player
	screen in 'htdocs/admin.pl'.
2012-04-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.5.
2012-04-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'TAPS.IS_TRANSPARENT' field to the database.
	* Incremented the database schema to 51.
	* Added a 'Transparency Mode' control to the 'Edit Tap' screen
	in 'htdocs/admin.pl'.
	* Implemented transparency mode in 'lwpd/lwingest.cpp'.
2012-04-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.6.
2014-05-09 Fred Gleason <fredg@paravelsystems.com>
	* Documented build parameters for CentOS 6 in 'INSTALL'.
	* Added an include for the 'studio.h' header in 'lwpd/cmdswitch.cpp'.
	* Added support for silnet rules in 'configure.in'.
2014-05-09 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up warnings in 'lwpd/lwsync.cpp' and 'lwpd/lwpd.cpp'.
2014-05-09 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.7.
2014-05-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed the installation path in 'images/Makefile.am' so the
	'make install' rule would work.
	* Changed the 'apache2' dependency to 'httpd' in 'loudwater.spec.in'.
2014-05-14 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.8.
2014-05-14 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'perl-HTML-Parser' dependency in 'loudwater.spec.in'.
2014-05-14 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.9.
2014-05-30 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'sox' dependency in 'loudwater.spec.in'.
2014-05-30 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'htdocs/admin.pl' that broke display of the
	channel mode in the Edit Button screen.
2014-05-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.10.